--- a/add-Contact.html
+++ b/add-Contact.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="/logic/inculdeHTML.js"></script>
+    <link rel="stylesheet" href="/Views/Style/desktop_template.css">
 </head>
-<body>
+<body onload="includeHTML()">
     <h1>Hier werden die Kontakte erstehen</h1>
+    <div w3-include-html="/Views/templates/desktop_template.html"></div> 
 </body>
 </html>
